修改文件: 自然语言处理.md

--- a/自然语言处理.md
+++ b/自然语言处理.md
@@ -26,6 +26,23 @@ grammar_cjkRuby: true
 		2.参数空间太大
 		3.每个词都与该句中的其他词有关，越往后面的词需要考虑的越多
 
+![解决思路1][3]
+
+		实际使用中使用上述第二个假设
+
+![举例][4]	
+
+		827/2533=0.33
+
+![量级][5]
+
+		通常使用n=2或者n=3
+		
+### 词向量：
+
 
   [1]: ./images/1514346622893.jpg
   [2]: ./images/1514346806490.jpg
+  [3]: ./images/1514347097877.jpg
+  [4]: ./images/1514347803372.jpg
+  [5]: ./images/1514348158960.jpg
