修改文件: 自然语言处理.md

--- a/自然语言处理.md
+++ b/自然语言处理.md
@@ -15,7 +15,7 @@ grammar_cjkRuby: true
 		6.复杂对话环境
 		7.……
 
-### 语言模型：
+### N-gram语言模型：
 
 ![模型][1]
 
@@ -40,9 +40,52 @@ grammar_cjkRuby: true
 		
 ### 词向量：
 
+		词与词之间是有距离的，意义相近的词应该距离相近
+		
+### word to vector 模型：
+
+![模型][6]
+
+		输入层->投影层->隐藏层->输出层
+		输入层到投影层后将输入的向量进行首尾相连作为新的输入到隐藏层
+
+![相关介绍][7]
+
+		只要语料库中出现其中一个，其他句子的概率也会相应的增大
+
+Hierchical Softmax（分层softmax模型）：
+
+![Hierchical Softmax（分层softmax模型）][8]
+
+![CBOW模型][9]
+
+![哈夫曼树][10]
+
+		把权值按从大到小的顺序排列（权值大的越靠近根节点）
+		类比到词向量训练时，其可以根据词频将词频高的放在前面训练，即把重要的词放在前面训练
+
+![Logistic回归（逻辑回归）][11]
+
+![CBOW模型层][12]
+
+		更新权重和词向量
+
+![描述][13]
+
+![举例][14]
+
 
   [1]: ./images/1514346622893.jpg
   [2]: ./images/1514346806490.jpg
   [3]: ./images/1514347097877.jpg
   [4]: ./images/1514347803372.jpg
   [5]: ./images/1514348158960.jpg
+  [6]: ./images/1514358380827.jpg
+  [7]: ./images/1514358532265.jpg
+  [8]: ./images/1514359005652.jpg
+  [9]: ./images/1514359191490.jpg
+  [10]: ./images/1514359234729.jpg
+  [11]: ./images/1514359639430.jpg
+  [12]: ./images/1514359936874.jpg
+  [13]: ./images/1514365833686.jpg
+  [14]: ./images/1514360213214.jpg
