修改文件: 自然语言处理.md

--- a/自然语言处理.md
+++ b/自然语言处理.md
@@ -74,6 +74,8 @@ Hierchical Softmax（分层softmax模型）：
 
 ![举例][14]
 
+![计算][15]
+
 
   [1]: ./images/1514346622893.jpg
   [2]: ./images/1514346806490.jpg
@@ -89,3 +91,4 @@ Hierchical Softmax（分层softmax模型）：
   [12]: ./images/1514359936874.jpg
   [13]: ./images/1514365833686.jpg
   [14]: ./images/1514360213214.jpg
+  [15]: ./images/1514365894265.jpg
