修改文件: 自然语言处理.md

--- a/自然语言处理.md
+++ b/自然语言处理.md
@@ -42,7 +42,7 @@ grammar_cjkRuby: true
 
 		词与词之间是有距离的，意义相近的词应该距离相近
 		
-### word to vector 模型：
+### word2vec 模型：
 
 ![模型][6]
 
@@ -76,6 +76,17 @@ Hierchical Softmax（分层softmax模型）：
 
 ![计算][15]
 
+		取正例化简后只剩左式，去负例化简后只剩下右式
+		dw根据哈夫曼编码后，只能取0或1
+
+![化简变换][16]
+
+		使用梯度上升
+		[X·A]'=X.T
+		上图最后一式是对投影层求导
+
+![词向量更新][17]
+
 
   [1]: ./images/1514346622893.jpg
   [2]: ./images/1514346806490.jpg
@@ -92,3 +103,5 @@ Hierchical Softmax（分层softmax模型）：
   [13]: ./images/1514365833686.jpg
   [14]: ./images/1514360213214.jpg
   [15]: ./images/1514365894265.jpg
+  [16]: ./images/1514366346768.jpg
+  [17]: ./images/1514367076233.jpg
