修改文件: 自然语言处理.md

--- a/自然语言处理.md
+++ b/自然语言处理.md
@@ -88,6 +88,21 @@ Hierchical Softmax（分层softmax模型）：
 ![词向量更新][17]
 
 
+### Negative Sampleing（负采样）模型：
+
+![CBOW的问题及使用负采样模型解决][18]
+
+![思路1][19]
+
+![思路2][20]
+
+		正例则直接使用概率，负例则使用1-其概率
+
+![计算转化][21]
+
+![参数更新][22]
+
+
   [1]: ./images/1514346622893.jpg
   [2]: ./images/1514346806490.jpg
   [3]: ./images/1514347097877.jpg
@@ -105,3 +120,8 @@ Hierchical Softmax（分层softmax模型）：
   [15]: ./images/1514365894265.jpg
   [16]: ./images/1514366346768.jpg
   [17]: ./images/1514367076233.jpg
+  [18]: ./images/1514367232041.jpg
+  [19]: ./images/1514367334196.jpg
+  [20]: ./images/1514367407573.jpg
+  [21]: ./images/1514367506512.jpg
+  [22]: ./images/1514367536294.jpg
