--- a/自然语言处理.md
+++ b/自然语言处理.md
@@ -92,6 +92,8 @@ Hierchical Softmax（分层softmax模型）：
 
 ![CBOW的问题及使用负采样模型解决][18]
 
+		语料库特别大时哈夫曼树生成时很庞大，同时许多重要的数据被放在了树的中部上下
+		
 ![思路1][19]
 
 ![思路2][20]
